--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "./components/global.css";
 
 /* For Navbar (Livvic) */
 @font-face {
